force-app/main/default/objects/pi__Category_Lead_Score__c/fields/pi__Lead__c.field-meta.xml
<CustomField>
    <fullName>pi__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Category_Lead_Scores</relationshipName>
    <type>Lookup</type>
</CustomField>