force-app/main/default/objects/pi__Category_Lead_Score__c/fields/pi__Pardot_Scoring_Category__c.field-meta.xml
<CustomField>
    <fullName>pi__Pardot_Scoring_Category__c</fullName>
    <label>Pardot Scoring Category</label>
    <referenceTo>pi__Pardot_Scoring_Category__c</referenceTo>
    <relationshipName>Category_Lead_Scores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>