force-app/main/default/objects/pi__Category_Lead_Score__c/fields/pi__Scoring_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>pi__Scoring_Category_Name__c</fullName>
    <formula>pi__Pardot_Scoring_Category__r.pi__Category_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scoring Category Name</label>
    <type>Text</type>
</CustomField>