force-app/main/default/objects/pi__Category_Lead_Score__c/listViews/pi__All.listView-meta.xml
<ListView>
    <fullName>pi__All</fullName>
    <columns>NAME</columns>
    <columns>pi__Lead__c</columns>
    <columns>pi__Pardot_Scoring_Category__c</columns>
    <columns>pi__Score__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>pi__Pardot_Account_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>