force-app/main/default/objects/pi__Category_Lead_Score__c/listViews/pi__All1.listView-meta.xml
<ListView>
    <fullName>pi__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>